# fatuous

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
documentation/: README.md  akarin_engine.tex  fatuous.tex  progress_diary.tex
documentation/.source_codes/: tasks.json
include/akarin_database/: shader_code_database.hpp  shader_program_database.hpp
include/akarin_database/glfw/: akarin_glfw.hpp  glfw_data.hpp
include/akarin_database/lighting/: lighting_database.hpp
include/akarin_database/mesh/: mesh_data.hpp  mesh_database.hpp  mesh_job.hpp
include/akarin_database/model/: model_data.hpp  model_database.hpp
include/akarin_database/shader/: shader_code.hpp  shader_code_database.hpp  shader_database.hpp  shader_file.hpp  shader_program.hpp  shader_program_database.hpp  vertex_shader.hpp
include/akarin_database/singleton/glfw/: akarin_glfw.hpp
include/akarin_database/texture/: texture_data.hpp  texture_database.hpp  texture_job.hpp
include/akarin_imgui/: akarin_imgui.hpp  entity_database_window.hpp  lighting_database_window.hpp  model_database_window.hpp  opengl_settings_window.hpp  shader_code_database_window.hpp  shader_database_window.hpp  shader_program_database_window.hpp
include/components/: depth_buffer.hpp  intensity.hpp  lighting.hpp  mesh.hpp  mesh_data.hpp  mesh_job.hpp  model.hpp  model_data.hpp  model_info.hpp  phong_light.hpp  position.hpp  shader.hpp  shader_file.hpp  swarm.hpp  texture.hpp  texture_data.hpp  texture_info.hpp  texture_job.hpp  transform.hpp  vertex.hpp
include/enums/: shader_type.hpp  texture_type.hpp
include/misc/: akarin_macros.hpp  akarin_profiler.hpp  akarin_timer.hpp  opengl_settings.hpp  shader_utilities.hpp  thread_pool.hpp  vertex_data.hpp
include/one/: engine.hpp
include/processes/: ecs_master_process.hpp  engine.hpp  entity_registry_master.hpp  fatuous.hpp  rendering_process.hpp  swarm_process.hpp
include/systems/: akarin_camera_system.hpp  camera_database.hpp  input_system.hpp  skybox_system.hpp
include/tools/: shader_utilities.hpp
include/types/: model_data.hpp  position.hpp  texture.hpp  vertex.hpp
shaders/: model.fs  model.vs
shaders/fragment/: model.glsl  omnishadow.glsl  skybox.glsl
shaders/geometry/: omnishadow.glsl
shaders/vertex/: model.glsl  omnishadow.glsl  skybox.glsl
src/: main.cpp
src/akarin_database/: shader_code_database.cpp  shader_program_database.cpp
src/akarin_database/glfw/: akarin_glfw.cpp  glfw_data.cpp
src/akarin_database/lighting/: lighting_database.cpp
src/akarin_database/mesh/: mesh_data.cpp  mesh_database.cpp  mesh_job.cpp
src/akarin_database/model/: model_data.cpp  model_database.cpp
src/akarin_database/shader/: shader_code.cpp  shader_code_database.cpp  shader_database.cpp  shader_file.cpp  shader_program.cpp  shader_program_database.cpp  shader_type.cpp  vertex_shader.cpp
src/akarin_database/singleton/glfw/: akarin_glfw.cpp
src/akarin_database/texture/: texture.cpp  texture_data.cpp  texture_database.cpp
src/akarin_imgui/: akarin_imgui.cpp  entity_database_window.cpp  lighting_database_window.cpp  model_database_window.cpp  opengl_settings_window.cpp  shader_code_database_window.cpp  shader_database_window.cpp  shader_program_database_window.cpp
src/components/: depth_buffer.cpp  intensity.cpp  lighting.cpp  mesh.cpp  mesh_data.cpp  mesh_job.cpp  model.cpp  model_data.cpp  model_info.cpp  phong_light.cpp  position.cpp  shader_file.cpp  texture.cpp  texture_data.cpp  texture_info.cpp  texture_job.cpp  transform.cpp  vertex.cpp
src/enums/: shader_type.cpp  texture_type.cpp
src/misc/: akarin_profiler.cpp  akarin_timer.cpp  opengl_settings.cpp  shader_utilities.cpp  thread_pool.cpp
src/processes/: ecs_master_process.cpp  engine.cpp  entity_registry_master.cpp  fatuous.cpp  rendering_process.cpp  swarm_process.cpp
src/systems/: akarin_camera_system.cpp  camera_database.cpp  input_system.cpp  skybox_system.cpp
src/tools/: akarin_profiler.cpp  shader_utilities.cpp  thread_pool.cpp
src/types/: texture.cpp
